# sdft-experiments

./: .gitignore  README.md  pyproject.toml
.claude/skills/read-arxiv-paper/: SKILL.md
.codex/skills/read-arxiv-paper/: SKILL.md
data/: superglue_fewshot_5shot_curated.json
knowledge/: summary_sdft_continual_learning.md
scripts/: run_sdft_fewshot.sh  run_sdft_full.sh  run_sft_fewshot.sh  run_sft_full.sh  run_superglue_fewshot_scenarios.sh  run_superglue_fewshot_scenarios_smoke.sh  run_tooluse_single_screen.sh  run_tooluse_sweep_screen.sh  run_wsc_scenarios.sh  run_wsc_scenarios_smoke.sh  sweep_tooluse.py  train.py
sdft/config/: __init__.py  distil.py
sdft/data/: __init__.py  superglue_small.py  tooluse.py
sdft/eval/: __init__.py  small_data_metrics.py  tooluse_metrics.py
sdft/trainers/: __init__.py  sft_small_data.py
sdft/trainers/distil/: __init__.py  _imports.py  callbacks.py  trainer.py
sdft/trainers/distil/mixins/: __init__.py  generation.py  logging.py  logprobs.py  loss.py  sampling.py  vllm_sync.py
tests/: test_callbacks.py  test_config_distil.py  test_data_superglue_small.py  test_data_tooluse.py  test_generation_mixin.py  test_import_guards.py  test_logging_mixin.py  test_logprobs_mixin.py  test_loss_mixin.py  test_public_api.py  test_sampling_mixin.py  test_script_train.py  test_sft_small_data_trainer.py  test_small_data_metrics.py  test_sweep_tooluse.py  test_tooluse_metrics.py  test_trainer_class.py  test_vllm_sync_mixin.py
